--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,41 @@
 version: '3.8'
 
 services:
+  n8n:
+    image: n8nio/n8n:latest
+    ports:
+      - "5678:5678"
+    environment:
+      - N8N_HOST=n8n
+      - N8N_PORT=5678
+      - N8N_PROTOCOL=http
+      - N8N_USER_MANAGEMENT_DISABLED=false
+      - N8N_BASIC_AUTH_ACTIVE=true
+      - N8N_BASIC_AUTH_USER=admin
+      - N8N_BASIC_AUTH_PASSWORD=password
+      - NODE_ENV=production
+      - WEBHOOK_URL=https://n8n.example.com
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=n8n
+      - POSTGRES_HOST=postgres
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_USER=postgres
+      - DB_POSTGRESDB_SCHEMA=public
+      - DB_POSTGRESDB_PASSWORD=postgres
+      - REDIS_HOST=redis
+    volumes:
+      - n8n_data:/home/node/.n8n
+    depends_on:
+      - postgres
+      - redis
+    restart: unless-stopped
+    networks:
+      - boombignose-network
+
   nca-toolkit:
     image: stephengpope/no-code-architects-toolkit:latest
     platform: linux/amd64
@@ -18,6 +53,8 @@ services:
       - postgres
       - redis
     restart: unless-stopped
+    networks:
+      - boombignose-network
 
   minio:
     image: quay.io/minio/minio
@@ -36,12 +73,16 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    networks:
+      - boombignose-network
 
   kokoro-tts:
     image: ghcr.io/remsky/kokoro-fastapi-cpu:v0.2.2
     ports:
       - "8880:8880"
     restart: unless-stopped
+    networks:
+      - boombignose-network
 
   postgres:
     image: postgres:15
@@ -59,6 +100,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - boombignose-network
 
   redis:
     image: redis:7
@@ -73,6 +116,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - boombignose-network
 
   supabase-db:
     image: supabase/postgres:15.1.0.117
@@ -90,6 +135,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - boombignose-network
 
   supabase-studio:
     image: supabase/studio:latest
@@ -102,6 +149,8 @@ services:
     depends_on:
       - supabase-db
     restart: unless-stopped
+    networks:
+      - boombignose-network
 
   ollama:
     image: ollama/ollama:latest
@@ -117,6 +166,8 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    networks:
+      - boombignose-network
 
 volumes:
   minio_data:
@@ -129,3 +180,9 @@ volumes:
     driver: local
   ollama_data:
     driver: local
+  n8n_data:
+    driver: local
+
+networks:
+  boombignose-network:
+    driver: bridge
