--- a/railway.toml
+++ b/railway.toml
@@ -1,15 +1,17 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
-watchPatterns = ["**/*.yml", "**/*.sh", "Dockerfile"]
+dockerfilePath = "Dockerfile.railway"
+watchPatterns = ["**/*.conf", "**/*.sh", "Dockerfile.railway"]
 
 [deploy]
 numReplicas = 1
-startCommand = "bash -c 'cd /app && ./entrypoint.sh'"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 sleepApplication = false
-healthcheckEnabled = false
+healthcheckEnabled = true
+healthcheckPath = "/health"
+healthcheckTimeout = 10
+healthcheckInterval = 30
 
 [service]
 internal_port = 8000
