Fixed healthcheck issues with multiple health endpoints

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,32 @@
 server {
-    listen 8000;
+    listen 8000 default_server;
     server_name _;
 
     location / {
-        root /app/public;
+        root /usr/share/nginx/html;
         index index.html;
     }
 
-    # Health check endpoint
-    location /health {
-        return 200 '{"status":"ok","timestamp":"$time_iso8601"}';
-        add_header Content-Type application/json;
+    # Health check endpoints
+    location = /health {
+        default_type application/json;
+        try_files /health/index.json =200;
+    }
+
+    location = /healthz {
+        default_type application/json;
+        try_files /healthz/index.json =200;
+    }
+
+    location = /railway-health {
+        default_type application/json;
+        try_files /railway-health/index.json =200;
+    }
+
+    # Simple text health check for Railway
+    location = /ping {
+        return 200 'OK';
+        add_header Content-Type text/plain;
     }
 
     # Redirect to GitHub repository
