--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -1,24 +1,29 @@
-FROM node:18-alpine
+FROM nginx:alpine
 
 # Install dependencies
-RUN apk add --no-cache python3 py3-pip curl postgresql-client redis bash net-tools nginx
+RUN apk add --no-cache curl bash
 
 # Set working directory
-WORKDIR /app
+WORKDIR /usr/share/nginx/html
 
 # Create a simple health check page
-RUN mkdir -p /app/public
-RUN echo '<!DOCTYPE html><html><head><title>BoomBigNose Health Check</title></head><body><h1>BoomBigNose Template</h1><p>Status: Running</p><p id="time"></p><script>document.getElementById("time").innerHTML = "Time: " + new Date().toISOString();</script></body></html>' > /app/public/index.html
+RUN echo '<!DOCTYPE html><html><head><title>BoomBigNose Health Check</title></head><body><h1>BoomBigNose Template</h1><p>Status: Running</p><p id="time"></p><script>document.getElementById("time").innerHTML = "Time: " + new Date().toISOString();</script></body></html>' > /usr/share/nginx/html/index.html
+
+# Create health check endpoints
+RUN mkdir -p /usr/share/nginx/html/health /usr/share/nginx/html/railway-health /usr/share/nginx/html/healthz
+COPY health.json /usr/share/nginx/html/health/index.json
+COPY health.json /usr/share/nginx/html/railway-health/index.json
+COPY health.json /usr/share/nginx/html/healthz/index.json
 
 # Set up nginx
-COPY nginx.conf /etc/nginx/http.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy startup script
-COPY start.sh /app/
-RUN chmod +x /app/start.sh
+# Create a startup script
+RUN echo '#!/bin/sh\necho "Starting nginx..."\nnginx -g "daemon off;"' > /start.sh
+RUN chmod +x /start.sh
 
-# Expose ports
+# Expose port
 EXPOSE 8000
 
 # Set entrypoint
-CMD ["/app/start.sh"]
+CMD ["/start.sh"]
