--- a/railway.toml
+++ b/railway.toml
@@ -9,9 +9,9 @@ restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 sleepApplication = false
 healthcheckEnabled = true
-healthcheckPath = "/health"
-healthcheckTimeout = 10
-healthcheckInterval = 30
+healthcheckPath = "/ping"
+healthcheckTimeout = 5
+healthcheckInterval = 15
 
 [service]
 internal_port = 8000
