Simplified deployment to remove all Docker dependencies

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,26 +7,18 @@ server {
         index index.html;
     }
 
-    # Health check endpoints
-    location = /health {
-        default_type application/json;
-        try_files /health/index.json =200;
-    }
-
-    location = /healthz {
-        default_type application/json;
-        try_files /healthz/index.json =200;
-    }
-
-    location = /railway-health {
-        default_type application/json;
-        try_files /railway-health/index.json =200;
-    }
-
-    # Simple text health check for Railway
+    # Health check endpoint for Railway
     location = /ping {
-        return 200 'OK';
-        add_header Content-Type text/plain;
+        root /usr/share/nginx/html;
+        try_files /ping =200;
+        default_type text/plain;
+    }
+
+    # JSON health check
+    location = /health {
+        root /usr/share/nginx/html;
+        try_files /health.json =200;
+        default_type application/json;
     }
 
     # Redirect to GitHub repository
@@ -34,8 +26,8 @@ server {
         return 302 https://github.com/Boom-Vitt/BoomBigNose;
     }
 
-    # Redirect to Railway template
-    location /template {
+    # Redirect to Railway project
+    location /railway {
         return 302 https://railway.app/project/3c5932b7-b548-4802-b39f-55d7ccfb545d;
     }
 }
