--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -1,29 +1,18 @@
 FROM nginx:alpine
 
-# Install dependencies
-RUN apk add --no-cache curl bash
-
 # Set working directory
 WORKDIR /usr/share/nginx/html
 
-# Create a simple health check page
-RUN echo '<!DOCTYPE html><html><head><title>BoomBigNose Health Check</title></head><body><h1>BoomBigNose Template</h1><p>Status: Running</p><p id="time"></p><script>document.getElementById("time").innerHTML = "Time: " + new Date().toISOString();</script></body></html>' > /usr/share/nginx/html/index.html
-
-# Create health check endpoints
-RUN mkdir -p /usr/share/nginx/html/health /usr/share/nginx/html/railway-health /usr/share/nginx/html/healthz
-COPY health.json /usr/share/nginx/html/health/index.json
-COPY health.json /usr/share/nginx/html/railway-health/index.json
-COPY health.json /usr/share/nginx/html/healthz/index.json
+# Copy static files
+COPY public/ /usr/share/nginx/html/
+COPY health.json /usr/share/nginx/html/health.json
+COPY health.json /usr/share/nginx/html/ping
 
 # Set up nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Create a startup script
-RUN echo '#!/bin/sh\necho "Starting nginx..."\nnginx -g "daemon off;"' > /start.sh
-RUN chmod +x /start.sh
-
 # Expose port
 EXPOSE 8000
 
-# Set entrypoint
-CMD ["/start.sh"]
+# Use nginx's default entrypoint
+CMD ["nginx", "-g", "daemon off;"]
