--- a/railway.toml
+++ b/railway.toml
@@ -10,6 +10,7 @@ healthcheckEnabled = true
 healthcheckPath = "/ping"
 healthcheckTimeout = 3
 healthcheckInterval = 10
+startCommand = "/app/entrypoint.railway.sh"
 
 [service]
 internal_port = 8000
