--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -29,8 +29,8 @@ RUN echo "OK" > /app/health/ping
 RUN echo "OK" > /usr/share/nginx/html/ping
 RUN echo '<!DOCTYPE html><html><head><title>BoomBigNose Health Check</title></head><body><h1>BoomBigNose Services</h1><p>Status: Running</p></body></html>' > /app/health/index.html
 
-# Expose port
-EXPOSE 8000
+# Expose ports
+EXPOSE 80 8000
 
 # Set entrypoint
 ENTRYPOINT ["/app/entrypoint.sh"]
