--- a/nginx.conf
+++ b/nginx.conf
@@ -3,20 +3,19 @@ server {
     server_name _;
 
     location / {
-        root /usr/share/nginx/html;
+        root /var/www/html;
         index index.html;
     }
 
     # Health check endpoint for Railway
     location = /ping {
-        root /usr/share/nginx/html;
-        try_files /ping =200;
-        default_type text/plain;
+        add_header Content-Type text/plain;
+        return 200 'OK';
     }
 
     # JSON health check
     location = /health {
-        root /usr/share/nginx/html;
+        root /var/www/html;
         try_files /health.json =200;
         default_type application/json;
     }
@@ -29,5 +28,19 @@ server {
     # Redirect to Railway project
     location /railway {
         return 302 https://railway.app/project/3c5932b7-b548-4802-b39f-55d7ccfb545d;
+    }
+
+    # Redirect root to n8n
+    location = / {
+        return 302 /n8n/;
+    }
+
+    # Proxy to n8n
+    location /n8n/ {
+        proxy_pass http://localhost:5678/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
