--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,11 +13,12 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:health_server]
-command=python3 -m http.server 8000 --directory /app/health
+[program:n8n]
+command=/usr/local/bin/node /usr/local/lib/node_modules/n8n/bin/n8n start
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+user=node
