--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:n8n]
-command=/usr/local/bin/node /usr/local/lib/node_modules/n8n/bin/n8n start
+command=n8n start
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
