--- a/supervisord.conf
+++ b/supervisord.conf
@@ -23,3 +23,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 user=node
+environment=HOME="/home/node",N8N_USER_FOLDER="/home/node/.n8n",N8N_CONFIG_FILES="/home/node/.n8n/config"
