Fix n8n permission issues and database connection

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -26,19 +26,21 @@ ENV N8N_BASIC_AUTH_PASSWORD=password
 ENV NODE_ENV=production
 ENV WEBHOOK_URL=https://n8n.boombignose.site
 
-# Database configuration
-ENV POSTGRES_USER=${POSTGRES_USER:-postgres}
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
-ENV POSTGRES_DB=${POSTGRES_DB:-postgres}
-ENV POSTGRES_HOST=${POSTGRES_HOST:-db}
-ENV POSTGRES_PORT=${POSTGRES_PORT:-5432}
+# Database configuration - using Railway environment variables
 ENV DB_TYPE=postgresdb
-ENV DB_POSTGRESDB_HOST=${POSTGRES_HOST:-db}
-ENV DB_POSTGRESDB_PORT=${POSTGRES_PORT:-5432}
-ENV DB_POSTGRESDB_DATABASE=${POSTGRES_DB:-postgres}
-ENV DB_POSTGRESDB_USER=${POSTGRES_USER:-postgres}
-ENV DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+ENV DB_POSTGRESDB_HOST=${PGHOST}
+ENV DB_POSTGRESDB_PORT=${PGPORT}
+ENV DB_POSTGRESDB_DATABASE=${PGDATABASE}
+ENV DB_POSTGRESDB_USER=${PGUSER}
+ENV DB_POSTGRESDB_PASSWORD=${PGPASSWORD}
 ENV DB_POSTGRESDB_SCHEMA=public
+
+# For backward compatibility
+ENV POSTGRES_HOST=${PGHOST}
+ENV POSTGRES_PORT=${PGPORT}
+ENV POSTGRES_DB=${PGDATABASE}
+ENV POSTGRES_USER=${PGUSER}
+ENV POSTGRES_PASSWORD=${PGPASSWORD}
 
 # Redis configuration
 ENV REDIS_HOST=${REDIS_HOST:-redis}
