--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,7 +15,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:n8n]
-command=n8n start
+command=/bin/sh -c "cd /home/node && HOME=/home/node N8N_USER_FOLDER=/home/node/.n8n n8n start"
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -23,4 +23,5 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 user=node
+directory=/home/node
 environment=HOME="/home/node",N8N_USER_FOLDER="/home/node/.n8n",N8N_CONFIG_FILES="/home/node/.n8n/config"
