--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,13 +15,13 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:n8n]
-command=/bin/sh -c "cd /home/node && HOME=/home/node N8N_USER_FOLDER=/home/node/.n8n n8n start"
+command=n8n start --no-database
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-user=node
-directory=/home/node
-environment=HOME="/home/node",N8N_USER_FOLDER="/home/node/.n8n",N8N_CONFIG_FILES="/home/node/.n8n/config"
+user=n8n
+directory=/home/n8n
+environment=HOME="/home/n8n",N8N_USER_FOLDER="/home/n8n/.n8n"
