Remove invalid --no-database flag and fix n8n configuration

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -67,9 +67,10 @@ ENV EXECUTIONS_CLEANUP=true
 ENV EXECUTIONS_CLEANUP_MAX_AGE=24
 
 # Security settings
-ENV N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+ENV N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
 ENV N8N_ENCRYPTION_KEY=a-random-32-character-string-for-enc
 ENV N8N_USER_FOLDER=/home/n8n/.n8n
+ENV N8N_CONFIG_FILES=/home/n8n/.n8n/.n8n/config
 ENV HOME=/home/n8n
 
 # Expose ports
