--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,7 +15,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:n8n]
-command=n8n start --no-database
+command=n8n start
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
